force-app/main/default/objects/Asset/fields/Next_Service_Due__c.field-meta.xml
<CustomField>
    <fullName>Next_Service_Due__c</fullName>
    <label>Next Service Due</label>
    <type>Date</type>
</CustomField>