force-app/main/default/objects/Asset/fields/Service_Perks_Available__c.field-meta.xml
<CustomField>
    <fullName>Service_Perks_Available__c</fullName>
    <label>Service Perks Available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>