force-app/main/default/objects/Asset/fields/Type_of_use__c.field-meta.xml
<CustomField>
    <fullName>Type_of_use__c</fullName>
    <label>Type of use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>